# rinkaku

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  action.yaml  compose_and_post_comment.sh  install.sh
.github/release-please/: .manifest.json  config.json
.github/workflows/: build-and-publish.yaml  lint-and-test.yaml  release-main.yaml  rinkaku-report.yaml  (+1 more)
docs/: action.md  architecture-and-limitations.md  cli-usage.md  cli.md  github-action.md  llm-review.md  tui.md
rinkaku/: CHANGELOG.md  Cargo.toml
rinkaku-core/: CHANGELOG.md  Cargo.toml
rinkaku-core/src/: deps.rs  diff.rs  extract.rs  file_size.rs  graph.rs  language.rs  lib.rs  main.rs  pipeline.rs  progress.rs  render.rs
rinkaku-core/src/deps_tests/: mod.rs  prefilter.rs  resolve_dependencies.rs  tags_resolver_exclusions.rs  tags_resolver_indexing.rs
rinkaku-core/src/extract_tests/: classification.rs  go.rs  mod.rs  python.rs  rust.rs  typescript.rs
rinkaku-core/src/graph_tests/: build_graph.rs  compute_fan_ins.rs  compute_hotspots.rs  compute_test_coverage.rs  mod.rs  pivot.rs  roots_and_cycles.rs  stamp_ids.rs
rinkaku-core/src/language/: go.rs  mod.rs  python.rs  rust.rs  typescript.rs
rinkaku-core/src/pipeline_tests/: analyze_diff.rs  analyze_repo.rs  classification_wiring.rs  collect_referenced_names.rs  file_size_warnings.rs  generated_exclusion.rs  is_generated_content.rs  mod.rs  parallel_determinism.rs  test_symbol_exclusion.rs
rinkaku-core/src/render/: digest.rs  markdown.rs  mermaid.rs  mod.rs  report.rs  shared.rs
rinkaku-core/src/render/markdown_tests/: change_graph_summary.rs  change_graph_tree.rs  classification_and_removed.rs  definition_body.rs  empty_and_ordering.rs  lookup_miss_defenses.rs  mod.rs  sections_skipped_fan_in_filesize.rs  untested_changes.rs
rinkaku-core/src/render/mermaid_tests/: class_styling.rs  empty_and_legend.rs  escaping.rs  mod.rs  node_budget_fallback.rs  removed_symbols.rs
rinkaku-tui/: CHANGELOG.md  Cargo.toml
rinkaku-tui/locales/: en.yml  ja.yml
rinkaku-tui/src/: annotation_markers.rs  annotation_markers_tests.rs  app.rs  blast_radius.rs  detail.rs  diff_shape.rs  diff_view.rs  help.rs  highlight.rs  hunk_split.rs  input_translate.rs  lib.rs  locale.rs  nav.rs  note_markers.rs  note_markers_tests.rs  order.rs  pivot.rs  review_flow.rs  row_view.rs  search.rs  search_tests.rs  session.rs  source.rs  source_diff.rs  source_split.rs  splash.rs  split_pairing.rs  tests.rs  tree.rs  ui.rs
rinkaku-tui/src/app/: handle_key.rs  input_key.rs  mod.rs  tests.rs
rinkaku-tui/src/app/tests/: basics.rs  focus.rs  help_overlay.rs  jump.rs  mod.rs  review.rs  right_pane.rs  scroll_reset.rs  search.rs  source_screen.rs  update_prompt.rs
rinkaku-tui/src/detail_tests/: build_detail.rs  build_dir_detail.rs  build_file_detail.rs  mod.rs  symbol_mentions.rs
rinkaku-tui/src/diff_shape_tests/: build_diff_pane_content.rs  change_stats.rs  changed_line_ranges.rs  hunk_start_lines.rs  mod.rs  pair_hunk_lines.rs  section_start_line.rs  symbol_id_for_scroll_line.rs
rinkaku-tui/src/event_loop/: goto.rs  goto_tests.rs  mod.rs  scroll_sync.rs  scroll_sync_tests.rs  scroll_sync_wrap_tests.rs  tests.rs
rinkaku-tui/src/help/: tests.rs
rinkaku-tui/src/hunk_split_tests/: mod.rs  split_hunk.rs
rinkaku-tui/src/input_translate_tests/: mod.rs  search.rs  translate_key.rs  translate_mouse.rs
rinkaku-tui/src/lib_tests/: diff_scroll_sync.rs  goto_dispatch.rs  hunk_jump.rs  mod.rs  note_snapshot.rs  open_pr_in_browser.rs  perform_export.rs  recompute_and_reload.rs  scroll_clamp.rs  translate_key.rs  translate_mouse.rs
rinkaku-tui/src/nav_tests/: default_collapse.rs  expand_collapse.rs  mod.rs  move_cursor.rs  retarget_cursor.rs  section_crossing.rs
rinkaku-tui/src/order/: mod.rs  rank.rs  sort.rs
rinkaku-tui/src/order/rank_tests/: mod.rs  rank_directories.rs
rinkaku-tui/src/order/sort_tests/: mod.rs  order_tree.rs
rinkaku-tui/src/order_tests/: cycle_edges.rs  cycle_partners.rs  mod.rs  order_tree.rs  rank_directories.rs  scc_helpers.rs
rinkaku-tui/src/review/: mod.rs  ports.rs  render.rs  render_tests.rs  tests.rs
rinkaku-tui/src/review_flow_tests/: annotation_snapshot.rs  mod.rs  note_snapshot.rs  perform_export.rs
rinkaku-tui/src/row_view_tests/: chg_ref_badges.rs  entry_row_line.rs  file_size_badges.rs  label_badges.rs  mod.rs  relative_labels.rs
rinkaku-tui/src/source_diff/: tests.rs
rinkaku-tui/src/source_split/: tests.rs
rinkaku-tui/src/split_pairing_tests/: mod.rs  pair_hunk_lines.rs
rinkaku-tui/src/tree/: mod.rs  tests_section.rs
rinkaku-tui/src/tree/tests_section_tests/: mod.rs
rinkaku-tui/src/tree/tree_tests/: build_tree_structure.rs  file_size_warnings.rs  mod.rs  skipped_files.rs  symbol_badges.rs  test_files_and_overlap.rs  tests_section.rs
rinkaku-tui/src/tree_tests/: build_tree_structure.rs  mod.rs  symbol_badges.rs  tests_section.rs
rinkaku-tui/src/ui/: blast_radius.rs  detail_pane.rs  diff_pane.rs  entry.rs  help_overlay.rs  mod.rs  overlay.rs  review_overlay.rs  review_overlay_tests.rs  scroll.rs  source_screen.rs  status.rs  style.rs
rinkaku-tui/src/ui/detail_pane_tests/: content_by_row_kind.rs  mod.rs  scroll_behavior.rs  size_warning.rs  wrap_reachability.rs
rinkaku-tui/src/ui/diff_pane_tests/: annotation_markers.rs  header_lines.rs  mod.rs  note_markers.rs  row_kinds.rs  split_view.rs  styling.rs
rinkaku-tui/src/ui/help_overlay/: tests.rs
rinkaku-tui/src/ui/scroll_tests/: clamp_and_indicator.rs  mod.rs  pair_wrap.rs  truncation.rs  windowing.rs  wrap_lines.rs  wrap_origins.rs
rinkaku-tui/src/ui/source_screen/: tests.rs
rinkaku-tui/src/ui/source_screen_tests/: error_handling.rs  highlighting.rs  mod.rs  overlay.rs  search.rs  split_view.rs
rinkaku/src/: browser.rs  cli.rs  clipboard.rs  display.rs  generated_paths.rs  log_writer.rs  main.rs  notes.rs  pipeline.rs  progress.rs  self_update.rs  spinner.rs  splash_progress.rs  test_util.rs
rinkaku/src/git/: cat_file_batch.rs  commands.rs  file_read.rs  mod.rs
rinkaku/src/github/: base_sha.rs  mod.rs  pr_arg.rs  pr_info.rs  remote.rs  review.rs  workdir.rs
(+106 files in other folders)
