[workspace]
resolver = "2"
members = ["rinkaku-core", "rinkaku-tui", "rinkaku"]

[workspace.package]
edition = "2024"
authors = ["Hironori Yamamoto"]
license = "MIT"
repository = "https://github.com/hiro-o918/rinkaku"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
aho-corasick = "1.1"
rstest = "0.23"
pretty_assertions = "1.4"
tempfile = "3.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
# Only rinkaku-tui depends on these (ADR 0016 decision 2): rinkaku-core's
# dependency set stays untouched.
ratatui = "0.30"
crossterm = "0.29"
