[workspace]
resolver = "2"
members = ["rinkaku-core", "rinkaku-tui", "rinkaku"]

[workspace.package]
edition = "2024"
authors = ["Hironori Yamamoto"]
license = "MIT"
repository = "https://github.com/hiro-o918/rinkaku"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
aho-corasick = "1.1"
# ADR 0031: parallelises `pipeline::analyze_repo`'s per-file tree-sitter
# parse. Only rinkaku-core depends on it directly today; declared at the
# workspace level to match the convention every other core crate follows.
rayon = "1.10"
rstest = "0.23"
pretty_assertions = "1.4"
tempfile = "3.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
# Only rinkaku-tui depends on this (ADR 0016 decision 2): rinkaku-core's
# dependency set stays untouched. Most crossterm usage goes through
# ratatui's own `ratatui::crossterm` re-export rather than a direct
# dependency; rinkaku-tui/Cargo.toml also declares crossterm directly, but
# only to opt into its `use-dev-tty` feature (ADR 0016's addendum on piped
# stdin) — see that file's own comment for why.
ratatui = "0.30"
# Already pulled in transitively by ratatui (its own line-wrapping widget
# uses it), but declared directly here too: rinkaku-tui's own `wrap_lines`
# (crate::ui) needs the same display-width calculation to make its manual
# wrap match ratatui's scroll unit exactly, so it must not rely on staying
# an un-pinned transitive dep.
unicode-width = "0.2"
