[package]
name = "rinkaku-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core diff-condensation engine for rinkaku: parses unified diffs and slices out changed symbols with their signatures and dependencies"
readme = "../README.md"
keywords = ["diff", "tree-sitter", "code-review", "llm"]
categories = ["development-tools"]

[lib]
name = "rinkaku_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
aho-corasick = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
