[package]
name = "rinkaku-core"
# release-please's cargo-workspace plugin reads `package.version` as a
# literal string; `version.workspace = true` resolves to a TOML table
# rather than a string and is rejected as invalid. Declare it directly
# here (and in rinkaku/Cargo.toml) while other fields stay inherited.
version = "0.6.13"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core diff-condensation engine for rinkaku: parses unified diffs and slices out changed symbols with their signatures and dependencies"
documentation = "https://docs.rs/rinkaku-core"
readme = "../README.md"
keywords = ["diff", "tree-sitter", "code-review", "llm"]
categories = ["development-tools"]

[lib]
name = "rinkaku_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
aho-corasick = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
