[package]
name = "rinkaku-tui"
# See rinkaku-core/Cargo.toml for why this is a literal version instead
# of `version.workspace = true`.
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive terminal UI view-models for rinkaku (ADR 0015/0016): directory tree, navigation, and detail views over a Report"
readme = "../README.md"
keywords = ["diff", "tui", "code-review"]
categories = ["development-tools"]

[lib]
name = "rinkaku_tui"
path = "src/lib.rs"

[dependencies]
rinkaku-core = { path = "../rinkaku-core", version = "0.1.0" }
# crossterm itself is not a direct dependency: every use goes through
# ratatui's own `ratatui::crossterm` re-export, which pins the matching
# version internally (see ratatui-crossterm) — declaring it here too would
# just be a second, redundant version to keep in sync.
ratatui = { workspace = true }
unicode-width = { workspace = true }
# Diff-pane syntax highlighting (ADR 0018): a TUI-only presentation
# concern, so the grammar crates are duplicated here rather than adding a
# highlight-query method to rinkaku-core's `LanguageSupport` port (ADR
# 0018's rejected "extend core" alternative).
tree-sitter = { workspace = true }
tree-sitter-highlight = "0.26"
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
