[package]
name = "rinkaku-tui"
# See rinkaku-core/Cargo.toml for why this is a literal version instead
# of `version.workspace = true`.
version = "0.6.14"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive terminal UI view-models for rinkaku (ADR 0015/0016): directory tree, navigation, and detail views over a Report"
documentation = "https://docs.rs/rinkaku-tui"
readme = "../README.md"
keywords = ["diff", "tui", "code-review"]
categories = ["development-tools"]

[lib]
name = "rinkaku_tui"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
rinkaku-core = { path = "../rinkaku-core", version = "0.6.14" }
ratatui = { workspace = true }
# Declared directly (unlike most crossterm usage, which goes through
# ratatui's own `ratatui::crossterm` re-export — see that re-export's use
# sites in this crate) solely to turn on the `use-dev-tty` feature. Cargo's
# feature unification then activates it on the single shared crossterm
# instance ratatui also depends on, since a workspace only ever builds one
# copy of a given dependency version. Without it, crossterm's default
# (`mio`-based) Unix event source fails outright with "Failed to initialize
# input reader" whenever stdin is not a TTY — e.g. `gh pr diff 123 |
# rinkaku`, the README's own primary usage example — because it tries to
# poll stdin itself rather than falling back to `/dev/tty` for keyboard
# input the way `use-dev-tty`'s reader does. Unix-only feature (reads
# `/dev/tty`); CI only runs ubuntu/macos (see workflow files), so this does
# not need a Windows fallback today. See docs/adr/0016 for the TUI stack
# this extends.
crossterm = { version = "0.29", default-features = false, features = ["use-dev-tty"] }
unicode-width = { workspace = true }
# Diff-pane syntax highlighting (ADR 0018): a TUI-only presentation
# concern, so the grammar crates are duplicated here rather than adding a
# highlight-query method to rinkaku-core's `LanguageSupport` port (ADR
# 0018's rejected "extend core" alternative).
tree-sitter = { workspace = true }
tree-sitter-highlight = "0.26"
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
# ADR 0055: the `?` help overlay's Japanese localization. Compiled in from
# `locales/{en,ja}.yml` at build time via the `i18n!` macro (`lib.rs`) —
# no runtime file IO, matching this crate's IO-at-the-boundary discipline.
rust-i18n = "4.2"

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
