[package]
name = "rinkaku"
# See rinkaku-core/Cargo.toml for why this is a literal version instead
# of `version.workspace = true`.
version = "0.6.8"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Condense PR diffs into signatures and their dependencies for LLM-friendly review"
documentation = "https://docs.rs/rinkaku"
readme = "../README.md"
keywords = ["diff", "tree-sitter", "code-review", "llm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rinkaku"
path = "src/main.rs"

[dependencies]
rinkaku-core = { path = "../rinkaku-core", version = "0.6.7" }
rinkaku-tui = { path = "../rinkaku-tui", version = "0.6.7" }
clap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
self_update = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
